@@ -24,12 +24,12 @@ eggs =
 [versions]
 zope.testing = 3.7.1
 zope.i18n = 3.6.0
-lxml = 2.1.3
+lxml = 2.1.5
 setuptools = 0.6c9
 
 [lxml]
 recipe = z3c.recipe.staticlxml
-egg = lxml>=2.1.3
+egg = lxml>=2.1.5
 
 [test]
 recipe = zc.recipe.testrunner<1.1dev
