@@ -1,6 +1,10 @@
 Changelog
 =========
 
+- Rework the "full namespace provided to path expression" change introduced
+  in 0.3. We no longer call the expensive locals() function but construct a
+  minimal namespace with the context and request ourselves. [hannosch]
+
 - If the ``__get__`` method is called uninstantiated, just return the
   class itself. [malthe]
 
